--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 body {
-  -webkit-text-size-adjust: 100%;
-  font-feature-settings: normal;
-  -webkit-tap-highlight-color: transparent;
-  font-family: ui-sans-serif, -apple-system, system-ui, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, Helvetica, Apple Color Emoji, Arial, Segoe UI Emoji, Segoe UI Symbol;
-  font-variation-settings: normal;
-  line-height: 1.5;
-  tab-size: 4;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
