--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,7 @@ body {
 .animate-showSteps {
   animation: showSteps 0.5s ease-out forwards;
 }
+
+.ant-form-item-required {
+  width: 100% !important;
+}
