add new authmodal

--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,12 @@ body {
 .ant-form-item-required {
   width: 100% !important;
 }
+
+.nsm7Bb-HzV7m-LgbsSe .nsm7Bb-HzV7m-LgbsSe-bN97Pc-sM5MNb {
+  justify-content: center !important;
+}
+
+.nsm7Bb-HzV7m-LgbsSe .nsm7Bb-HzV7m-LgbsSe-BPrWId {
+  flex-grow: unset !important;
+  -webkit-flex-grow: none !important;
+}
